webredis融合facelog，实现启动facelog时自动启动webredis