@@ -12,6 +12,7 @@ import com.google.common.base.Joiner;
 import com.google.common.base.Predicate;
 import com.google.common.base.Strings;
 import com.google.common.collect.ImmutableMap;
+import com.google.common.collect.ImmutableMap.Builder;
 import com.google.common.collect.Lists;
 import com.google.common.collect.Sets;
 
@@ -42,7 +43,7 @@ class RedisManagement implements ServiceConstant{
 	/** redis数据库配置参数 */
 	private static Map<PropName, Object> parameters;
 	private static Process webredisProcess;
-	private static String webredisURL;
+	private static String webredisURL = null;
 	/** webredis服务参数 */
 	private final static Map<String, Object> webredisParameters;
 	/** 消息系统(redis)基本参数  */
@@ -66,15 +67,17 @@ class RedisManagement implements ServiceConstant{
 	protected RedisManagement() {
 		init();
 		initWebredis();
-		redisParam = ImmutableMap.<MQParam,String>builder()
+		Builder<MQParam, String> builder = ImmutableMap.<MQParam,String>builder()
 			.put(MQParam.REDIS_URI, redisURI)
-			.put(MQParam.WEBREDIS_URL, webredisURL)
 			.put(MQParam.CMD_CHANNEL, createCmdChannel())
 			.put(MQParam.LOG_MONITOR_CHANNEL, createLogMonitorChannel())
 			.put(MQParam.HB_MONITOR_CHANNEL, createHeartbeatMonitorChannel())
 			.put(MQParam.HB_INTERVAL, CONFIG.getInteger(HEARTBEAT_INTERVAL, DEFAULT_HEARTBEAT_PERIOD).toString())
-			.put(MQParam.HB_EXPIRE, CONFIG.getInteger(HEARTBEAT_EXPIRE, DEFAULT_HEARTBEAT_EXPIRE).toString())
-			.build();
+			.put(MQParam.HB_EXPIRE, CONFIG.getInteger(HEARTBEAT_EXPIRE, DEFAULT_HEARTBEAT_EXPIRE).toString());
+		if(!Strings.isNullOrEmpty(webredisURL)){
+			builder.put(MQParam.WEBREDIS_URL, webredisURL);
+		}
+		redisParam = builder.build();
 		GlobalConfig.logRedisParameters(JedisPoolLazy.getDefaultInstance().getParameters());
 	}
 	/** 创建随机命令通道 */
@@ -208,7 +211,7 @@ class RedisManagement implements ServiceConstant{
 		}
 	}
 	/** 
-	 * 根据提醒的参数启动本地 webredis 服务(node.js) 
+	 * 根据提供的参数启动本地 webredis 服务(node.js) 
 	 * @param parameters 
 	 * @return node.js进程
 	 */
@@ -216,65 +219,65 @@ class RedisManagement implements ServiceConstant{
 		String nodejsExe = (String) parameters.get(NODEJS_EXE);
 		String webredisFile = (String) parameters.get(WEBREDIS_FILE);
 
-		checkArgument(new File(nodejsExe).canExecute(),
-				"NOT EXECUTABLE FILE(非可执行文件名) %s",nodejsExe);
-		ArrayList<String> args = Lists.newArrayList(shell(),nodejsExe);
-		
+		ArrayList<String> args = Lists.newArrayList();
+		args.add(nodejsExe);
 		args.add(webredisFile);
 		// 命令行指定端口
 		if(parameters.containsKey(WEBREDIS_PORT)){
-			args.add("--port " + parameters.get(WEBREDIS_PORT));
+			args.add("--port=" + parameters.get(WEBREDIS_PORT));
 		}
 		/** 优先使用  WEBREDIS_RURL  */
 		if(parameters.containsKey(WEBREDIS_RURI)){
 			// 命令行指定redis 连接url
-			args.add("--rurl " + parameters.get(WEBREDIS_RURI));
+			args.add("--rurl=" + parameters.get(WEBREDIS_RURI));
 		}else{
 			// 命令行指定redis 主机
 			if(parameters.containsKey(WEBREDIS_RHOST)){
-				args.add("--rhost " + parameters.get(WEBREDIS_RHOST));
+				args.add("--rhost=" + parameters.get(WEBREDIS_RHOST));
 			}
 			// 命令行指定redis 端口
 			if(parameters.containsKey(WEBREDIS_RPORT)){
-				args.add("--rport " + parameters.get(WEBREDIS_RPORT));
+				args.add("--rport=" + parameters.get(WEBREDIS_RPORT));
 			}
 			// 命令行指定redis 连接密码
 			if(parameters.containsKey(WEBREDIS_RAUTH)){
-				args.add("--rauth " + parameters.get(WEBREDIS_RAUTH));
+				args.add("--rauth=" + parameters.get(WEBREDIS_RAUTH));
 			}
 			// 命令行指定redis 数据库
 			if(parameters.containsKey(WEBREDIS_RDB)){
-				args.add("--rdb " + parameters.get(WEBREDIS_RDB));
+				args.add("--rdb=" + parameters.get(WEBREDIS_RDB));
 			}
 		}
 		try {
 			logger.info("start webredis server(启动webredis服务器)");
 			String cmd = Joiner.on(' ').join(args);
-			logger.debug("cmd(启动命令): {}",cmd);
-			//				Process process =  Runtime.getRuntime().exec(cmd);
-			return  new ProcessBuilder(cmd)
+			logger.info("cmd(启动命令): {}",cmd);
+			return new ProcessBuilder(args)
 					.redirectError(Redirect.INHERIT)
+					.redirectOutput(Redirect.INHERIT)
 					.start();
+
 		} catch (IOException e) {
 			throw new RuntimeException(e);
 		} 
 	}
 	
-	/** 中止本地 redis 服务器*/
+	/** 中止本地 webredis 服务 */
 	private static void  shutdownLocalWebredisServer(){
 		if(webredisProcess != null){
 			try {
 				webredisProcess.exitValue();				
 			} catch (IllegalThreadStateException  e) {
+				logger.info("shutdown webredis server(关闭webredis服务)");
 				webredisProcess.destroy();
 			}
 			webredisProcess = null;
 		}
 	}
-	private static void initWebredis(){
+	private void initWebredis(){
 		String host = (String) webredisParameters.get(WEBREDIS_HOST);
 		int port = (int) webredisParameters.get(WEBREDIS_PORT);
-		webredisURL = String.format("http://%s:%d",host,port);
+		String webredisURL = String.format("http://%s:%d",host,port);
 		Predicate<String> responseValidator = new Predicate<String>() {
 
 			@Override
@@ -284,26 +287,35 @@ class RedisManagement implements ServiceConstant{
 		};
 		if(NetworkUtil.selfBind(host)){
 			if(webredisParameters.containsKey(NODEJS_EXE) 
-				&& webredisParameters.containsKey(WEBREDIS_FILE)){
+					&& webredisParameters.containsKey(WEBREDIS_FILE)){
 
-				if(!NetworkUtil.testHttpConnect(host, port, responseValidator)){
+				if(!NetworkUtil.testHttpConnectChecked(webredisURL, responseValidator)){
 					webredisProcess = startLocalWebredis(webredisParameters);
 					for(int c=0;c<3;++c){
 						try {
 							Thread.sleep(2000);
-							if(NetworkUtil.testHttpConnect(host, port, responseValidator)){
-								return;
+							try {
+								webredisProcess.exitValue();
+								break;
+							} catch (IllegalThreadStateException e) {
+								if(NetworkUtil.testHttpConnectChecked(webredisURL, responseValidator)){
+									RedisManagement.webredisURL = webredisURL;
+									return;
+								}
 							}
+
 						} catch (InterruptedException e) {
 							break;
 						}
 					}
+					throw new IllegalStateException("FAIL TO START WEBREDIS SERVER(启动webredis失败) ");
 				}
 			}
-		}else if(!NetworkUtil.testHttpConnect(host, port, responseValidator)){
+		}else	 if(!NetworkUtil.testHttpConnectChecked(webredisURL, responseValidator)){
 			// 检查指定的webredis外部连接是否可访问
-			logger.warn("INVALID WEBREDIS SERVER(webredis服务不可访问) http://{}:{}",host,port);
+			logger.warn("INVALID WEBREDIS SERVER(webredis服务不可访问) http://{}:{}",host,port);			
 		}
+		RedisManagement.webredisURL = webredisURL;
 	}
 	/** 返回redis访问参数 */
 	protected Map<MQParam,String> getRedisParameters(){
